--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>nav_msgs</depend>
   <depend>std_msgs</depend>
   <depend>gazebo_ros</depend>
+  <depend>robot_state_publisher</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
