--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,8 @@
   <depend>std_msgs</depend>
   <depend>gazebo_ros</depend>
   <depend>robot_state_publisher</depend>
+  <depend>visualization_msgs</depend>
+  <depend>rviz2</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
