--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>robotic_bird</name>
   <version>0.0.1</version>
   <description>Robotic Bird - fly to target point (ROS2 + Gazebo)</description>
-  <maintainer email="you@example.com">Selim</maintainer>
+  <maintainer email="salimbenturkia@gmail.com">Selim</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
